force-app/main/default/objects/AssociatedLicense__c/AssociatedLicense__c.object-meta.xml
<CustomObject>
    <description>PacPoint-IC071619- Created for PVL phase 1</description>
    <label>Associated License</label>
    <nameField>
        <displayFormat>AL-{0000}</displayFormat>
        <label>Associated License Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Licenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>