force-app/main/default/objects/AssociatedLicense__c/fields/ActiveAClasses__c.field-meta.xml
<CustomField>
    <fullName>ActiveAClasses__c</fullName>
    <description>PacPoint-FT020320 - Created for PVL phase 1</description>
    <formula>EmployeeLicense__r.NumberofActiveAClasses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active A Classes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>