force-app/main/default/objects/AssociatedLicense__c/fields/ActiveTClasses__c.field-meta.xml
<CustomField>
    <fullName>ActiveTClasses__c</fullName>
    <description>PacPoint-FT020320 - Created for PVL phase 1</description>
    <formula>EmployeeLicense__r.NumberofActiveTClasses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active T Classes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>