force-app/main/default/objects/AssociatedLicense__c/fields/Dual__c.field-meta.xml
<CustomField>
    <fullName>Dual__c</fullName>
    <description>PacPoint-KN07272020-Created for PVL Phase 1 Sprint 6</description>
    <formula>IF( AND (  EmployeeLicense__r.Dual__c = true,  TEXT(EmploymentStatus__c) = &quot;Employed&quot;),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dual</label>
    <type>Checkbox</type>
</CustomField>