force-app/main/default/objects/AssociatedLicense__c/fields/DualIndicator__c.field-meta.xml
<CustomField>
    <fullName>DualIndicator__c</fullName>
    <description>PacPoint-FT081319 - Created for PVL phase 1</description>
    <label>Dual Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dual</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>