force-app/main/default/objects/AssociatedLicense__c/fields/Employee_License_Number_Text_Formula__c.field-meta.xml
<CustomField>
    <fullName>Employee_License_Number_Text_Formula__c</fullName>
    <formula>EmployeeLicense__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee License Number</label>
    <type>Text</type>
</CustomField>