force-app/main/default/objects/AssociatedLicense__c/fields/EmployeeActiveInactive__c.field-meta.xml
<CustomField>
    <fullName>EmployeeActiveInactive__c</fullName>
    <description>PacPoint-KN081619 - Created for PVL Phase 1</description>
    <formula>TEXT( EmployeeLicense__r.ActiveInactive__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Active / Inactive</label>
    <type>Text</type>
</CustomField>