force-app/main/default/objects/AssociatedLicense__c/fields/EmployeeDateofAutoForfeiture__c.field-meta.xml
<CustomField>
    <fullName>EmployeeDateofAutoForfeiture__c</fullName>
    <description>PacPoint-KN081619 - Created for PVL Phase 1</description>
    <formula>TEXT( EmployeeLicense__r.DateofAutoForfeiture__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Date of Auto Forfeiture</label>
    <type>Text</type>
</CustomField>