force-app/main/default/objects/AssociatedLicense__c/fields/EmployeeLicense__c.field-meta.xml
<CustomField>
    <fullName>EmployeeLicense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Associated Entities</relationshipLabel>
    <relationshipName>AssociatedEntities</relationshipName>
    <type>Lookup</type>
</CustomField>