force-app/main/default/objects/AssociatedLicense__c/fields/EmployeeLicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>EmployeeLicenseNumber__c</fullName>
    <description>Used to populate the license number formula in the employee license</description>
    <formula>EmployeeLicense__r.LicenseNumberFormula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee License Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>