force-app/main/default/objects/AssociatedLicense__c/fields/EmployeeLicenseStatus__c.field-meta.xml
<CustomField>
    <fullName>EmployeeLicenseStatus__c</fullName>
    <description>Pac Point-DN010820 - Created for PVL Sprint 3 Phase 1</description>
    <formula>TEXT(EmployeeLicense__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee License Status</label>
    <type>Text</type>
</CustomField>