force-app/main/default/objects/AssociatedLicense__c/fields/EmployeeLicenseType__c.field-meta.xml
<CustomField>
    <fullName>EmployeeLicenseType__c</fullName>
    <description>Pac Point-DN010820 - Created for PVL Sprint 3 Phase 1</description>
    <formula>EmployeeLicense__r.LicenseType__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee License Type</label>
    <type>Text</type>
</CustomField>