force-app/main/default/objects/AssociatedLicense__c/fields/EmployeeLicenseTypeofEntity__c.field-meta.xml
<CustomField>
    <fullName>EmployeeLicenseTypeofEntity__c</fullName>
    <description>Pac Point-DN010820 - Created for PVL Sprint 3 Phase 1</description>
    <formula>TEXT(EmployeeLicense__r.TypeofEntity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee License Type of Entity</label>
    <type>Text</type>
</CustomField>