force-app/main/default/objects/AssociatedLicense__c/fields/EmployeeName__c.field-meta.xml
<CustomField>
    <fullName>EmployeeName__c</fullName>
    <description>PacPoint-FT081319- Created for PVL phase 1</description>
    <formula>IF(
AND(

EmployeeLicense__r.LicenseType__r.Entity__c = true,
EmployeeLicense__r.SoleOwner__c = false),

EmployeeLicense__r.Licensee__r.Name,

EmployeeLicense__r.Licensee__r.FirstName &amp; &quot; &quot;&amp; EmployeeLicense__r.Licensee__r.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Name</label>
    <type>Text</type>
</CustomField>