force-app/main/default/objects/AssociatedLicense__c/fields/EmployeeNonRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>EmployeeNonRenewalDate__c</fullName>
    <description>PacPoint-KN081619 - Created for PVL Phase 1</description>
    <formula>TEXT( EmployeeLicense__r.NonRenewalDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Non Renewal Date</label>
    <type>Text</type>
</CustomField>