force-app/main/default/objects/AssociatedLicense__c/fields/EmployeeStatus__c.field-meta.xml
<CustomField>
    <fullName>EmployeeStatus__c</fullName>
    <description>PacPoint-KN081619 - Created for PVL Phase 1</description>
    <formula>TEXT( EmployeeLicense__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Status</label>
    <type>Text</type>
</CustomField>