force-app/main/default/objects/AssociatedLicense__c/fields/EmploymentExpireDate__c.field-meta.xml
<CustomField>
    <fullName>EmploymentExpireDate__c</fullName>
    <description>PacPoint-FT032420 - Created for PVL Phase 1</description>
    <label>Employment Expire Date</label>
    <type>Date</type>
</CustomField>