force-app/main/default/objects/AssociatedLicense__c/fields/EmploymentStatus__c.field-meta.xml
<CustomField>
    <fullName>EmploymentStatus__c</fullName>
    <description>PacPoint-IC071619- Created for PVL phase 1</description>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employed</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Pending Employment</fullName>
                <isActive>false</isActive>
                <label>Pending Employment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>