force-app/main/default/objects/AssociatedLicense__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>PacPoint-IC080519- Created for PVL phase 1</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>