force-app/main/default/objects/AssociatedLicense__c/fields/Entity_Title__c.field-meta.xml
<CustomField>
    <fullName>Entity_Title__c</fullName>
    <formula>EntityLicense__r.LicenseType__r.LicenseType__c</formula>
    <label>Entity Title</label>
    <type>Text</type>
</CustomField>