force-app/main/default/objects/AssociatedLicense__c/fields/EntityActiveInactive__c.field-meta.xml
<CustomField>
    <fullName>EntityActiveInactive__c</fullName>
    <description>PacPoint-KN081619 - Created for PVL Phase 1</description>
    <formula>TEXT( EntityLicense__r.ActiveInactive__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Active / Inactive</label>
    <type>Text</type>
</CustomField>