force-app/main/default/objects/AssociatedLicense__c/fields/EntityDateofAutoForfeiture__c.field-meta.xml
<CustomField>
    <fullName>EntityDateofAutoForfeiture__c</fullName>
    <description>PacPoint-KN081619 - Created for PVL Phase 1</description>
    <formula>TEXT( EntityLicense__r.DateofAutoForfeiture__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Date of Auto Forfeiture</label>
    <type>Text</type>
</CustomField>