force-app/main/default/objects/AssociatedLicense__c/fields/EntityLicense__c.field-meta.xml
<CustomField>
    <fullName>EntityLicense__c</fullName>
    <description>PacPoint-IC071619- Created for PVL phase 1</description>
    <label>Entity License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Associated Employees</relationshipLabel>
    <relationshipName>AssociatedEmployee</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>