force-app/main/default/objects/AssociatedLicense__c/fields/EntityLicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>EntityLicenseNumber__c</fullName>
    <formula>EntityLicense__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity License Number</label>
    <type>Text</type>
</CustomField>