force-app/main/default/objects/AssociatedLicense__c/fields/EntityLicenseNumberFormular__c.field-meta.xml
<CustomField>
    <fullName>EntityLicenseNumberFormular__c</fullName>
    <formula>EntityLicense__r.LicenseNumberFormula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity License Number Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>