force-app/main/default/objects/AssociatedLicense__c/fields/EntityLicenseStatus__c.field-meta.xml
<CustomField>
    <fullName>EntityLicenseStatus__c</fullName>
    <description>Pac Point-DN010820 - Created for PVL Sprint 3 Phase 1</description>
    <formula>TEXT(EntityLicense__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity License Status</label>
    <type>Text</type>
</CustomField>