force-app/main/default/objects/AssociatedLicense__c/fields/EntityLicenseType__c.field-meta.xml
<CustomField>
    <fullName>EntityLicenseType__c</fullName>
    <description>Pac Point-DN010820 - Created for PVL Sprint 3 Phase 1</description>
    <formula>EntityLicense__r.LicenseType__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity License Type</label>
    <type>Text</type>
</CustomField>