force-app/main/default/objects/AssociatedLicense__c/fields/EntityName__c.field-meta.xml
<CustomField>
    <fullName>EntityName__c</fullName>
    <description>PacPoint-FT081319- Created for PVL phase 1</description>
    <formula>IF(

AND(

          ISBLANK(EntityLicense__r.Licensee__r.Name),
          ISBLANK(EntityLicense__r.Licensee__r.LastName)

   )

, 
EmployeeLicense__r.Licensee__r.FirstName &amp; &quot; &quot;&amp; EmployeeLicense__r.Licensee__r.LastName, 


IF(

          ISBLANK(EntityLicense__r.Licensee__r.LastName),
          EntityLicense__r.Licensee__r.Name,

          EntityLicense__r.Licensee__r.FirstName &amp; &quot; &quot;&amp; EntityLicense__r.Licensee__r.LastName

)


)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Name</label>
    <type>Text</type>
</CustomField>