force-app/main/default/objects/AssociatedLicense__c/fields/EntityNonRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>EntityNonRenewalDate__c</fullName>
    <description>PacPoint-KN081619 - Created for PVL Phase 1</description>
    <formula>TEXT( EntityLicense__r.NonRenewalDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Non Renewal Date</label>
    <type>Text</type>
</CustomField>