force-app/main/default/objects/AssociatedLicense__c/fields/EntityPrincipal__c.field-meta.xml
<CustomField>
    <fullName>EntityPrincipal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN081619 - Created for PVL Phase 1</description>
    <label>Entity / Principal</label>
    <type>Checkbox</type>
</CustomField>