force-app/main/default/objects/AssociatedLicense__c/fields/EntityStatus__c.field-meta.xml
<CustomField>
    <fullName>EntityStatus__c</fullName>
    <description>PacPoint-KN081619 - Created for PVL Phase 1</description>
    <formula>TEXT(EntityLicense__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Status</label>
    <type>Text</type>
</CustomField>