force-app/main/default/objects/AssociatedLicense__c/fields/ExcludefromRenewalRollup__c.field-meta.xml
<CustomField>
    <fullName>ExcludefromRenewalRollup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Renewals</description>
    <inlineHelpText>If this Associated License record is for a PCFR License, check this checkbox.</inlineHelpText>
    <label>Exclude from Renewal Rollup</label>
    <type>Checkbox</type>
</CustomField>