force-app/main/default/objects/AssociatedLicense__c/fields/LossofEntity__c.field-meta.xml
<CustomField>
    <fullName>LossofEntity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-FT030920 - Created for PVL phase 1</description>
    <label>Loss of Entity</label>
    <type>Checkbox</type>
</CustomField>