force-app/main/default/objects/AssociatedLicense__c/fields/LossofRME__c.field-meta.xml
<CustomField>
    <fullName>LossofRME__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-FT031220 - Created for PVL phase 1</description>
    <label>Loss of RME</label>
    <type>Checkbox</type>
</CustomField>