force-app/main/default/objects/AssociatedLicense__c/fields/Pos__c.field-meta.xml
<CustomField>
    <fullName>Pos__c</fullName>
    <formula>LEFT(TEXT(Position__c), (FIND(&quot;-&quot;, TEXT(Position__c))-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pos</label>
    <type>Text</type>
</CustomField>