force-app/main/default/objects/AssociatedLicense__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACR - AUCTIONEER (MOTOR VEHICLE INDUSTRY)</fullName>
            </value>
            <value>
                <fullName>AMD - PHYSICIAN&apos;S ASSISTANT (MEDICAL)</fullName>
            </value>
            <value>
                <fullName>AP - APPRENTICE (COSMETOLOGY BEAUTY APPRENTICE)</fullName>
            </value>
            <value>
                <fullName>BAR - BARBER</fullName>
            </value>
            <value>
                <fullName>BEO - BEAUTY OPERATOR</fullName>
            </value>
            <value>
                <fullName>BIC - BROKER-IN-CHARGE (REAL ESTATE COMMISSION)</fullName>
            </value>
            <value>
                <fullName>BO - BRANCH OFFICE</fullName>
            </value>
            <value>
                <fullName>CBA - MOTOR VEHICLE BROKER AGENT</fullName>
            </value>
            <value>
                <fullName>CDH - COMMUNITY SERVICE DENTAL HYGIENIST</fullName>
            </value>
            <value>
                <fullName>CDT - COMMUNITY SERVICE DENTIST</fullName>
            </value>
            <value>
                <fullName>CPA - CERTIFIED PUBLIC ACCOUNTANT</fullName>
            </value>
            <value>
                <fullName>CS - MOTOR VEHICLE SALESPERSON (MOTOR VEHICLE INDUSTRY BOARD)</fullName>
            </value>
            <value>
                <fullName>DHT - TEMPORARY DENTAL HYGIENIST</fullName>
            </value>
            <value>
                <fullName>DRP - DISTRIBUTOR REPRESENTATIVE (MOTOR VEHICLE INDUSTRY)</fullName>
            </value>
            <value>
                <fullName>DTT - TEMPORARY DENTIST</fullName>
            </value>
            <value>
                <fullName>EIC - SALES AGENT EMPLOYEE/INDEPENDENT CONTRACTOR (TIME SHARE)</fullName>
            </value>
            <value>
                <fullName>EMP - EMPLOYMENT AGENCY PRINCIPAL</fullName>
            </value>
            <value>
                <fullName>FR - FIELD REPRESENTATIVE (PEST CONTROL)</fullName>
            </value>
            <value>
                <fullName>FRP - FACTORY REPRESENTATIVE (MOTOR VEHICLE INDUSTRY)</fullName>
            </value>
            <value>
                <fullName>GVT - PHYSICIAN % GOVERNMENT (MEDICAL)</fullName>
            </value>
            <value>
                <fullName>I - INACTIVE</fullName>
            </value>
            <value>
                <fullName>ITR - INSTRUCTORS</fullName>
            </value>
            <value>
                <fullName>MAT - MASSAGE THERAPIST</fullName>
            </value>
            <value>
                <fullName>MC - CERTIFIED MECHANIC</fullName>
            </value>
            <value>
                <fullName>MOP - MANAGING OPERATOR (COSMETOLOGY)</fullName>
            </value>
            <value>
                <fullName>MRC - REGISTERED CERTIFIED MECHANIC</fullName>
            </value>
            <value>
                <fullName>MR - REGISTERED MECHANIC</fullName>
            </value>
            <value>
                <fullName>MS - SOLICITOR (MORTGAGE BROKERS)</fullName>
            </value>
            <value>
                <fullName>OPC - OUTSIDE PUBLIC CONTACT (TIME SHARE)</fullName>
            </value>
            <value>
                <fullName>PA - PUBLIC ACCOUNTANT (CHANGED &quot;PA&quot; FROM &quot;PRINCIPAL AGENT&quot; FOR EMP TO &quot;PUBLIC ACCOUNTANT&quot; FOR ACCOUNTANCY BOARD PER 12/9/10 ICSD MTG)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>