force-app/main/default/objects/AssociatedLicense__c/fields/PositionFormula__c.field-meta.xml
<CustomField>
    <fullName>PositionFormula__c</fullName>
    <formula>IF(

LEN(LEFT( TEXT(Position__c) , FIND(&quot;(&quot;, TEXT(Position__c))-1)) = 0,

RIGHT(TEXT(Position__c) ,LEN(TEXT(Position__c))-Find(&quot;-&quot;, TEXT(Position__c) )-1),

LEFT((RIGHT(TEXT(Position__c) ,LEN(TEXT(Position__c))-Find(&quot;-&quot;, TEXT(Position__c) )-1)) , FIND(&quot;(&quot;,(RIGHT(TEXT(Position__c) ,LEN(TEXT(Position__c))-Find(&quot;-&quot;, TEXT(Position__c) )-1)))-1)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position Formula</label>
    <type>Text</type>
</CustomField>