force-app/main/default/objects/AssociatedLicense__c/fields/PositionStatus__c.field-meta.xml
<CustomField>
    <fullName>PositionStatus__c</fullName>
    <label>Position Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D - DESIGNATED</fullName>
            </value>
            <value>
                <fullName>P - PRINCIPAL</fullName>
            </value>
            <value>
                <fullName>T - TEMPORARY (REAL ESTATE)</fullName>
            </value>
            <value>
                <fullName>X - EXTEND TEMPORARY (REAL ESTATE)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>