force-app/main/default/objects/AssociatedLicense__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>PacPoint-FT112119- Created for PVL phase 1</description>
    <label>Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>