force-app/main/default/objects/AssociatedLicense__c/fields/RequiresallEmployeestoRenew__c.field-meta.xml
<CustomField>
    <fullName>RequiresallEmployeestoRenew__c</fullName>
    <formula>EntityLicense__r.LicenseType__r.RequiresallEmployeestoRenew__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in the 1 way dependency process</inlineHelpText>
    <label>Requires all Employees to Renew</label>
    <type>Checkbox</type>
</CustomField>