force-app/main/default/objects/AssociatedLicense__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <formula>RIGHT(TEXT(TerminationReason__c) ,LEN(TEXT(TerminationReason__c))-Find(&quot;-&quot;, TEXT(TerminationReason__c) )-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term</label>
    <type>Text</type>
</CustomField>