force-app/main/default/objects/AssociatedLicense__c/fields/TerminationReason__c.field-meta.xml
<CustomField>
    <fullName>TerminationReason__c</fullName>
    <description>PacPoint-FT032420 - Created for PVL Phase 1</description>
    <label>Termination Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AEMP - ADD ANOTHER EMPLOYER (FOR CLB LICENSEE WHO IS GOING TO BE A &quot;DUAL&quot; OR, IS ALREADY DUAL &amp; ADDING ANOTHER EMPLOYER)</fullName>
            </value>
            <value>
                <fullName>BLANK - FOR RICO INACTIVES</fullName>
            </value>
            <value>
                <fullName>BOUT - REAL ESTATE BROKER OUT OF TOWN</fullName>
            </value>
            <value>
                <fullName>CANL - VOLUNTARILY CANCELLED LICENSE--INDIVIDUAL ONLY</fullName>
            </value>
            <value>
                <fullName>CLOS - CLOSED/CANCELLED (TERM DT TRANS) (DIRECT - SOLE OWNER CLOSES OR INDIVIDUAL CANCELS LICENSE)</fullName>
            </value>
            <value>
                <fullName>CONTE - CONTINUING EDUCATION</fullName>
            </value>
            <value>
                <fullName>CP - CHANGE POSITION WITH SAME EMPLOYER &amp; OFFICE (DIRECT - EMPLOYEE WORKING FOR SAME OFFICE/EMPLOYER BUT CHANGES POSITION WITHIN ORGANIZATION (I.E. RBS TO PB)</fullName>
            </value>
            <value>
                <fullName>DECE - DECEASED (TERM DT TRANS) (FOR INDIVIDUALS ONLY) (DIRECT)</fullName>
            </value>
            <value>
                <fullName>DELQ - DELINQUENT (TERM DT TRANS) (DIRECT - LICENSEE DID NOT RENEW LICENSE)</fullName>
            </value>
            <value>
                <fullName>EC - EMPLOYER CLOSED/CANCELLED/INACTIVE (FOR &quot;EMPLOYEES&quot; &amp; NOT SOLE OWNERS) (INDIRECT - EMPLR VOLUNTARILY REPORTED CHANGE WHICH AFFECTS EMPLOYEE WITH INVOLUNTARY CHANGE OF STATUS)</fullName>
            </value>
            <value>
                <fullName>ECIL - EMPLOYER CHANGED ISLAND (FOR &quot;EMPLOYEES&quot; &amp; NOT SOLE OWNERS) (INDIRECT - EMPLOYEE&apos;S EMPMT TERMINATED WHEN EMPLR (SOLE OWNER) MOVES TO ANOTHER ISLAND)</fullName>
            </value>
            <value>
                <fullName>EDEL - EMPLOYER DELINQUENT/FORFEITED (FOR &quot;EMPLOYEES&quot; &amp; NOT SOLE OWNERS) (INDIRECT - WHEN EMPLOYEE RENEWS LICENSE &amp; EMPLR DOES NOT RENEW, EMPLOYEE&apos;S EMPLMT TERMINATED)</fullName>
            </value>
            <value>
                <fullName>ELNR - EMPLOYER LICENSE NO LONGER REQUIRED</fullName>
            </value>
            <value>
                <fullName>ELOS - EMPLOYER DISSOLVED/DECEASED/NO PRINCIPAL (FOR &quot;EMPLOYEES&quot; &amp; NOT SOLE OWNERS) (INDIRECT - EMPLR IS INVOLUNTARILY AFFECTED BY SITUATION &amp; EMPLOYEES ARE TERMINATED)</fullName>
            </value>
            <value>
                <fullName>ENEW - EMPLOYER HIRED NEW PRINCIPAL (PB, BIC, RME) (FOR DISPLACED PRINCIPAL) (INDIRECT)</fullName>
            </value>
            <value>
                <fullName>ENIS - EMPLOYER LOSS OF INSURANCE (FOR EMPLOYEES &amp; NOT SOLE OWNERS) (INDIRECT - WHEN AN EMPLOYER LOSES HIS INSURANCE EMPLOYEE&apos;S EMPLOYMENT IS TERMINATED)</fullName>
            </value>
            <value>
                <fullName>ENSF - EMPLOYER DELINQUENT DUE TO BOUNCED CHECK (FOR &quot;EMPLOYEES&quot; &amp; NOT SOLE OWNERS) (INDIRECT - EMPLMT OF EMPLOYEES TERMINATED WHEN EMPLR&apos;S RENEWAL CHECK BOUNCES (EMPLMT RESUMES WHEN PAYMENT MADE?)</fullName>
            </value>
            <value>
                <fullName>ERBA - EMPLOYER MOVED TO A RESTRICTED BUSINESS ADDRESS (FOR &quot;EMPLOYEES&quot; &amp; NOT SOLE OWNERS) (INDIRECT - BROKER WITH &quot;RESTRICTED&quot; ADDRESS NOT ALLOWED TO HAVE EMPLOYEES OTHER THAN PEOPLE RESIDING WITH BROKER)</fullName>
            </value>
            <value>
                <fullName>ESUP - LOSS OF SUPERVISOR (INDIRECT)</fullName>
            </value>
            <value>
                <fullName>EZ - DISCIPLINARY ACTION TAKEN AGAINST EMPLOYER (FOR &quot;EMPLOYEES&quot; &amp; NOT SOLE OWNERS) (INDIRECT - EMPLMT OF EMPLOYEES TERMINATED WHEN DISCIPLINARY ACTION (EMPLR NOT ALLOWED TO OPERATE) TAKEN AGAINST EMPLR)</fullName>
            </value>
            <value>
                <fullName>FORF - FORFEITED (DIRECT - LICENSE CONSIDERED &quot;FORFEITED&quot; AFTER THE TIME LIMIT TO RESTORE A &quot;DELINQUENT&quot; LICENSE IS PAST)</fullName>
            </value>
            <value>
                <fullName>I - INACTIVE LICENSE (EFF DT TRANS) OR INACTIVATED (TERM DT TRANS) (DIRECT)</fullName>
            </value>
            <value>
                <fullName>LP - LAW REPEALED</fullName>
            </value>
            <value>
                <fullName>MAIN - TERMINATION DUE TO MAIN OFFICE</fullName>
            </value>
            <value>
                <fullName>MLOS - ASSC. MAIN OFFICE LOST REPONSIBLE EMPLOYEE</fullName>
            </value>
            <value>
                <fullName>MOST - MOVED OUT-OF-STATE OR TO ANOTHER ISLAND (DIRECT - EMPLMT TERMINATED WHEN LICENSEE LEAVES HAWAII OR MOVES TO ANOTHER ISLAND FROM BROKER&apos;S OFFICE)</fullName>
            </value>
            <value>
                <fullName>NBIC - TERMINATION DUE TO BROKER-IN-CHARGE</fullName>
            </value>
            <value>
                <fullName>NB - NEW BROKER LICENSEE (REAL ESTATE COMMISSION)</fullName>
            </value>
            <value>
                <fullName>NEMP - TRANSFERRED FROM ONE EMPLOYER TO ANOTHER EMPLOYER, SAME POSITION CODE (DIRECT)</fullName>
            </value>
            <value>
                <fullName>N - NEW LICENSEE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>